--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/main.ts"
   },
   "author": "Loïc Boiteux",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^18.15.11",
+    "discord.js": "^14.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
+  }
 }
