Le bot est maintenant "fonctionnel".

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
             "node_modules/@types"
         ],
         "sourceMap": false,
-        "baseUrl": "./"
+        "baseUrl": "./",
+        "noImplicitAny" : false
     },
     "files": [
         "src/main.ts"
