--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "bb-bot",
-  "version": "3.0.1",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/main.ts"
+    "start": "nodemon src/main.ts"
   },
   "author": "Loïc Boiteux",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.15.11",
-    "discord.js": "^14.8.0",
+    "@discordjs/builders": "^1.6.1",
+    "@discordjs/rest": "^1.7.0",
+    "discord-api-types": "^0.37.37",
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.45",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
