Ajout de la commande "Help". Ajout du token.

--- a/src/misc/config.json
+++ b/src/misc/config.json
@@ -3,5 +3,7 @@
     "Token_2" : "-on3KdgDL3dvhbJx2EA1dVWxmc",
     
     "ClientID" : "761752606799560787",
-    "GuildID" : "774446440252309524"
+    "GuildID" : "774446440252309524",
+
+    "colour" : "0x990000"
 }
