--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/main.ts"
+    "start": "ts-node src/main.ts"
   },
   "author": "Loïc Boiteux",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
+    "chalk": "^5.2.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
