--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "auto-start": "nodemon src/main.ts"
   },
   "author": "Loïc Boiteux",
   "license": "ISC",
