--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "A small side project",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "start:dev": "ts-node-dev src/index.ts",
-    "start:prod": "node dist/index.js",
-    "build": "tsc",
-    "watch": "tsc -w"
+    "start": "ts-node src/index.ts"
   },
   "author": "Loïc Boiteux",
   "license": "ISC",
