--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "urban-dictionary": "^3.0.2"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
